--- a/ecom/ui/index.html
+++ b/ecom/ui/index.html
@@ -2,10 +2,12 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>ui</title>
+    <title>Sutu.shop</title>
   </head>
   <body>
-    <div id="app"></div>
+    <div id="app">
+			<router-view></router-view>
+		</div>
     <!-- built files will be auto injected -->
   </body>
 </html>
