--- a/ecom/ui/index.html
+++ b/ecom/ui/index.html
@@ -21,6 +21,7 @@
 			<router-view></router-view>
 		</div>
     <!-- built files will be auto injected -->
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/1.19.0/TweenMax.min.js"></script>
 		<script type="text/javascript" src="https://seal.websecurity.norton.com/getseal?host_name=sutu.shop&amp;size=L&amp;use_flash=NO&amp;use_transparent=YES&amp;lang=en"></script>
   </body>
 </html>
