use our bootstrap lib

--- a/ecom/ui/index.html
+++ b/ecom/ui/index.html
@@ -2,16 +2,13 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Sutu.shop</title>
-		<link rel="stylesheet" type="text/css" href="static/fonts/flaticon.css">
-		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-		<link href="static/bower_components/animate.css/animate.min.css" rel="stylesheet"/>
-		<link rel="stylesheet" href="static/app.css">
+    <title>sutu.shop</title>
   </head>
   <body>
     <div id="app">
 			<fbscript></fbscript>
 			<router-view></router-view>
 		</div>
+    <!-- built files will be auto injected -->
   </body>
 </html>
